# evalwire

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  SPECS.md  mkdocs.yml  pyproject.toml  qa.md  release-please-config.json  ruff.toml  spec-review.md  ty.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  pr-title.yml  release.yml
demo/: .env.example  README.md  docker-compose.yml  requirements.txt  run.py  upload.py  utils.py
demo/agent/: graph.py
demo/data/: testset.csv
demo/experiments/rag_pipeline/: __init__.py  task.py  top_k.py
docs/: changelog.md  concepts.md  configuration.md  index.md  quick-start.md  troubleshooting.md
docs/api/: cli.md  config.md  evaluators.md  index.md  langgraph.md  observability.md  runner.md  uploader.md
docs/guides/: custom-evaluators.md
src/evalwire/: __init__.py  cli.py  config.py  evaluators.py  langgraph.py  observability.py  results.py  runner.py  uploader.py  validator.py
src/evalwire/evaluators/: __init__.py  _helpers.py  composition.py  contains.py  exact_match.py  json_match.py  llm_judge.py  membership.py  numeric_tolerance.py  regex.py  schema.py  top_k.py
tests/: conftest.py  smoke_test.py  test_build_subgraph.py  test_cli.py  test_composition_evaluators.py  test_config.py  test_evaluators.py  test_evaluators_property.py  test_helpers.py  test_observability.py  test_results.py  test_runner.py  test_task_async.py  test_uploader.py  test_validator.py
tests/integration/: conftest.py  test_runner_integration.py  test_uploader_integration.py
