[project]
name = "evalwire"
version = "0.1.0"
description = "Systematic, reproducible evaluation of LangGraph nodes and subgraphs against testsets, tracked in Arize Phoenix."
readme = "README.md"
authors = [
    { name = "evalwire contributors" },
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
