[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "evalwire"
version         = "0.2.0"
description     = "Systematic evaluation of LangGraph nodes using Arize Phoenix experiments."
readme          = "README.md"
authors         = [{ name = "evalwire contributors" }]
requires-python = ">=3.10"
dependencies = [
    "arize-phoenix>=13.0,<14",
    "pandas>=2.0",
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]
langchain = ["openinference-instrumentation-langchain>=0.1"]
openai    = ["openinference-instrumentation-openai>=0.1"]
all       = ["evalwire[langgraph,langchain,openai]"]

[project.scripts]
evalwire = "evalwire.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/evalwire"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25",
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]
demo = [
    "evalwire[langgraph,openai]",
    "arize-phoenix>=13.0,<14",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "langgraph>=1.0,<2",
    "openai>=1.0,<2",
    "openinference-instrumentation-langchain>=0.1,<0.2",
    "python-dotenv>=1.0",
]
