[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "evalwire"
version         = "0.3.1"
description     = "Systematic evaluation of LangGraph nodes using Arize Phoenix experiments."
readme          = "README.md"
license         = "BSD-3-Clause"
authors         = [{ name = "evalwire contributors" }]
requires-python = ">=3.10"
keywords        = ["evaluation", "langgraph", "phoenix", "llm", "testing", "arize"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "arize-phoenix>=13.0,<14",
    "pandas>=2.0",
    "click>=8.0",
    "jsonschema>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage      = "https://zurfjereluhmie.github.io/evalwire/"
Repository    = "https://github.com/zurfjereluhmie/evalwire"
Documentation = "https://zurfjereluhmie.github.io/evalwire/"
Changelog     = "https://github.com/zurfjereluhmie/evalwire/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/zurfjereluhmie/evalwire/issues"

[project.optional-dependencies]
langgraph  = ["langgraph>=1.1,<2"]
langchain  = ["openinference-instrumentation-langchain>=0.1"]
openai     = ["openinference-instrumentation-openai>=0.1"]
llm-judge  = ["langchain-core>=1.0,<2"]
all        = ["evalwire[langgraph,langchain,openai,llm-judge]"]

[project.scripts]
evalwire = "evalwire.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/evalwire"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:ldap3",
    "ignore::DeprecationWarning:phoenix.evals",
    "ignore::DeprecationWarning:phoenix.server",
    "ignore::DeprecationWarning:phoenix.session",
    "ignore::DeprecationWarning:strawberry",
    "ignore::DeprecationWarning:pydantic",
    "ignore::DeprecationWarning:alembic",
    "ignore::sqlalchemy.exc.SAWarning",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25",
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]
demo = [
    "evalwire[langgraph,openai]",
    "arize-phoenix>=13.0,<14",
    "langchain>=1.0,<2",
    "langchain-core>=1.0,<2",
    "langchain-openai>=1.0,<2",
    "langgraph>=1.1,<2",
    "openai>=2.0,<3",
    "openinference-instrumentation-langchain>=0.1,<0.2",
    "python-dotenv>=1.0,<2",
]
